2010-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thinp/thinp.c,
	* src/thrend/thrend.c,
	* src/thcoll/thcoll.c,
	* src/thcoll/cweight.c,
	* src/thwstr/thwstr.c,
	* src/thwchar/thwchar.c,
	* src/thwbrk/thwbrk.c,
	* src/thstr/thstr.c,
	* src/thcell/thcell.c:
	Reformat source. Add editor modeline.

2010-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* tests/thsort.c: Yet another GPL header leftover removal.
	Update my e-mail address.

2010-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Replace <thai/tis.h> with a rewritten one, so we can enforce the
	license.

	* include/thai/tis.h:
	Rewritten based on Unicode names, with TIS_ prefix.

	* src/thinp/thinp.c (corrections, th_validate),
	* src/thrend/thrend.c (shiftdown_tone_ad, shiftdownleft_tone_ad,
	  shiftleft_tone_ad, shiftdown_bv_bd, tailcutcons, th_render_cell_,
	  th_render_cell_tis),
	* src/thbrk/brk-maximal.c (th_brkpos_hints),
	* src/thcell/thcell.c (th_next_cell, th_prev_cell),
	* tests/test_thcell.c (test_ans_nodecomp_am, test_ans_decomp_am):
	Update character names to the new TIS_* ones.

2010-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thai/*.h, src/*.c, src/*/*.c,
	* Makefile.am, include/Makefile.am, include/thai/Makefile.am,
	* src/Makefile.am, src/*/Makefile.am,
	* tests/*.c, tests/*.sh,
	* tests/Makefile.am,
	* data/Makefile.am,
	* man/template.3, man/man3/*.3,
	* man/Makefile.am, man/man3/Makefile.am:
	Remove CVS $Id in all files.

	* src/thctype/wtt.c: Fix file name in comment.

2010-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thai/*.h, src/*.c, src/*/*.c: Add license header to every
	source file.

2010-02-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* doc/Makefile.am: The added *.c dependencies must be from src/*/*.c,
	not include/thai/*.c. Silly copy-and-paste error.

2010-02-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* doc/Makefile.am: Add *.c to doxygen.stamp dependency, as the doc